[gd_scene load_steps=9 format=3 uid="uid://ccgkcqhn171ok"]

[ext_resource type="Script" path="res://Scenes/exit_door.gd" id="1_u01le"]
[ext_resource type="Texture2D" uid="uid://k70bc20njgla" path="res://graphics/door_640p.png" id="2_df4vx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo4ul"]
size = Vector2(40, 59)

[sub_resource type="Animation" id="Animation_yo1gi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Info:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_e3yfa"]
resource_name = "float"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Info:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(0.7, 0.7), Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1.00136e-05, 1.00136e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhxtu"]
_data = {
"RESET": SubResource("Animation_yo1gi"),
"float": SubResource("Animation_e3yfa")
}

[sub_resource type="SystemFont" id="SystemFont_2h3vs"]

[sub_resource type="LabelSettings" id="LabelSettings_i0ryx"]
font = SubResource("SystemFont_2h3vs")
font_size = 20
font_color = Color(0.901961, 0.360784, 0.360784, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="ExitDoor" type="Node2D"]
script = ExtResource("1_u01le")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 45.5)
shape = SubResource("RectangleShape2D_wo4ul")

[node name="Door640p" type="Sprite2D" parent="."]
scale = Vector2(0.238359, 0.238359)
texture = ExtResource("2_df4vx")

[node name="InfoTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hhxtu")
}

[node name="Info" type="Label" parent="."]
offset_left = -103.0
offset_top = -124.0
offset_right = 123.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 15)
text = "Uratuj wiÄ™cej pieczywa!"
label_settings = SubResource("LabelSettings_i0ryx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
